Tweak: Monologue line-height
• Added a `line-height` for .monologue text to be `1.8 * @font-size`.
	» Intended to stay the same even when a portion of text is larger (thus, a `px` size instead of just `1.8`).
	» Intended to be overridden as needed for larger text, or just wider spacing.

--- a/less/main.less
+++ b/less/main.less
@@ -18,6 +18,7 @@
 .monologue {
 	@font-size: (@font-size-base * 1.5); // 36px, should be equivalent to 36pt
 	.font_cabin-sketch-regular(@font-size);
+	line-height: (@font-size * 1.8);
 	
 	b {
 		.font_cabin-sketch-bold(@font-size);
