--- a/css/styles.css
+++ b/css/styles.css
@@ -6316,6 +6316,7 @@ button.close {
 .monologue {
   font: 36px "Cabin Sketch", sans-serif;
   font-weight: 400;
+  line-height: 64.8px;
 }
 .monologue b {
   font: 36px "Cabin Sketch", sans-serif;
