Added text-shadow to #ambitions-phase content
• Added the same `text-shadow` #sky-phase uses to #ambitions-phase— 3px spread, 25% black.
• Minor: Changed #ambitions-phase's color from `white` to `#fff`.
	» Hex rulez.

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6508,7 +6508,8 @@ body {
 #ambitions-phase {
   position: relative;
   z-index: 200;
-  color: white;
+  color: #fff;
+  text-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
 }
 #ambitions-phase > .back {
   z-index: -1;
