--- a/less/main.less
+++ b/less/main.less
@@ -158,7 +158,8 @@ html, body { height: 100%; }
 	.phase;
 	z-index: 200;
 	
-	color: white;
+	color: #fff;
+	text-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
 	
 	> .back {
 		&, & .back {
