Fix: `.vert-*-block .inner` & `.monologue` w/o `p`
• Changed `.vert-block()` to affect only `.inner` children, and made those children in `index.html` `div.inner`s.
	» I keep messing up the layout by putting multiple elements insider of a `vert-middle-block` when there should only be one.
• Eliminated the `p.monologue` tags in `index.html`— they're now `div.inner`s.
	• Added `.monologue` to each phase's <section>— since the whole thing's a monologue anyway.
		» Seems to work as expected.

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6425,7 +6425,7 @@ body {
   width: 100%;
   height: 100%;
 }
-.vert-top-block > * {
+.vert-top-block > .inner {
   display: table-cell !important;
   vertical-align: top;
 }
@@ -6434,7 +6434,7 @@ body {
   width: 100%;
   height: 100%;
 }
-.vert-middle-block > * {
+.vert-middle-block > .inner {
   display: table-cell !important;
   vertical-align: middle;
 }
@@ -6443,7 +6443,7 @@ body {
   width: 100%;
   height: 100%;
 }
-.vert-bottom-block > * {
+.vert-bottom-block > .inner {
   display: table-cell !important;
   vertical-align: bottom;
 }
