--- a/less/main.less
+++ b/less/main.less
@@ -85,7 +85,7 @@ html, body { height: 100%; }
 	width: 100%; height: 100%;
 	// @maybe: min-height: 100%; // I don't remember where I found this CSS, but it originally had a min-height in it.  It might be necessary for some older or *cough*IE*cough* browsers.
 	
-	> * {
+	> .inner {
 		display: table-cell !important;
 		vertical-align: @verticalAlign;
 	}
