--- a/less/main.less
+++ b/less/main.less
@@ -34,6 +34,9 @@
 	em b, b em {
 		.font_cabin-sketch-bold(@em-strong-font-size);
 	}
+	i, i * {
+		font-style: oblique !important;
+	}
 	
 	.header() {
 		small {
