Killed responsive layout… again
• Re-applied all the non-responsive stuff from last time.
	» So text-layout media queries are more difficult than I thought.  Also kinda pointless— we just want things to scale down, right?
	• This time instead of removing the meta viewport completely, just changed it from `initial-scale` to `maximum-scale`.

--- a/less/styles.less
+++ b/less/styles.less
@@ -1,4 +1,5 @@
 @import "../bower_components/bootstrap/less/bootstrap.less";
+@import (inline) "non-responsive.css";
  
 @import "mixins.less";
 @import "colors.less";
