--- a/less/main.less
+++ b/less/main.less
@@ -101,7 +101,13 @@
 
 // Layout
 
-html, body { height: 100%; }
+@body-min-width: 970px;
+
+html, body {
+	height: 100%;
+	/// fix for right-edge white area when the viewport is narrower than bootstrap .container width set in non-responsive.css
+	min-width: @body-min-width !important;
+}
 
 .screen-height-rel {
 	.vh() {}
