Added min-height to #title-phase
• Added a `min-height` of 768px to `#title-phase` and any `.container`/`.container-fluid` it contains.
	» This goes a long ways towards fixing things being too smushed together vertically on small-screen devices like iPhone 4s & 5s.

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6773,6 +6773,11 @@ body {
 #title-phase > .back .back.fixed {
   position: fixed;
 }
+#title-phase,
+#title-phase .container,
+#title-phase .container-fluid {
+  min-height: 768px;
+}
 #title-phase > .back.fill,
 #title-phase > .back .back.fill {
   background-color: #accdea;
