--- a/less/main.less
+++ b/less/main.less
@@ -242,6 +242,10 @@ html, body {
 	.phase;
 	z-index: 300;
 	
+	&, .container, .container-fluid {
+		min-height: 768px;
+	}
+	
 	> .back {
 		&, & .back {
 			&.fill {
