--- a/less/main.less
+++ b/less/main.less
@@ -8,6 +8,7 @@
 @import "/fonts/indie-flower.less";
 @import "/fonts/megrim.less";
 @import "/fonts/oswald.less";
+@import "/fonts/raleway-dots.less";
 
 
 
