Shifted #stargazer right; moved #comingsoon to bottom-left
• Shifted the #stargzer to a 30% pivot point (50% being centered) so that her head is centered and her body extends to the right.
• Moved the #comingsoon badge from the bottom-right to the bottom-left, since we've got extra room there now.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7022,7 +7022,7 @@ body {
   width: 220px;
   height: auto;
   left: 50%;
-  margin-left: -110px;
+  margin-left: -66px;
   bottom: -10px;
 }
 #title-bottom {
@@ -7032,7 +7032,7 @@ body {
   width: 210px;
   height: auto;
   bottom: 10px;
-  right: 10px;
+  left: 10px;
 }
 
 /*# sourceMappingURL=styles.css.map */
