--- a/less/main.less
+++ b/less/main.less
@@ -447,7 +447,7 @@ html, body {
 			height: auto;
 			
 			left: 50%;
-			margin-left: (-@stargazerWidth / 2);
+			margin-left: (-@stargazerWidth * 0.3);
 			
 			bottom: -10px;
 		}
@@ -464,7 +464,7 @@ html, body {
 			width: 210px;
 			height: auto;
 			
-			bottom: 10px; right: 10px;
+			bottom: 10px; left: 10px;
 		}
 	}
 }
