Tweak: Reduced .statement text-shadow
• Removed one of `.statement`'s text-shadows and reduced the other to 50% opacity.
	» I really think it's easier to read without so much contrasting glow around it.

--- a/less/main.less
+++ b/less/main.less
@@ -60,8 +60,7 @@
 	.font_codystar(@font-size);
 	
 	color: @orange-darker;
-	text-shadow: 0 0 2px rgba(255, 255, 255, 1.0),
-		0 0 5px rgba(255, 255, 255, 1.0);
+	text-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
 }
 
 .verse {
