--- a/css/styles.css
+++ b/css/styles.css
@@ -6476,7 +6476,7 @@ h2 .monologue small {
   font: 55.2px "Codystar", sans-serif;
   font-weight: 400;
   color: #a53d06;
-  text-shadow: 0 0 2px #ffffff, 0 0 5px #ffffff;
+  text-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
 }
 .verse {
   display: block;
