--- a/less/main.less
+++ b/less/main.less
@@ -111,13 +111,13 @@ html, body {
 
 .screen-height-rel {
 	.vh() {}
-	& .vh-50, &.vh-50 { .vh(); min-height: 50vh; }
-	& .vh-75, &.vh-75 { .vh(); min-height: 75vh; }
-	& .vh-100, &.vh-100 { .vh(); min-height: 100vh; }
-	& .vh-150, &.vh-150 { .vh(); min-height: 150vh; }
-	& .vh-200, &.vh-200 { .vh(); min-height: 200vh; }
-	& .vh-300, &.vh-300 { .vh(); min-height: 300vh; }
-	& .vh-400, &.vh-400 { .vh(); min-height: 400vh; }
+	& .vh-50, &.vh-50 { .vh(); height: 50vh; }
+	& .vh-75, &.vh-75 { .vh(); height: 75vh; }
+	& .vh-100, &.vh-100 { .vh(); height: 100vh; }
+	& .vh-150, &.vh-150 { .vh(); height: 150vh; }
+	& .vh-200, &.vh-200 { .vh(); height: 200vh; }
+	& .vh-300, &.vh-300 { .vh(); height: 300vh; }
+	& .vh-400, &.vh-400 { .vh(); height: 400vh; }
 }
 
 @base-height: 1000px;
