Added #versuskidspresent overlay
• Added `<a><img>` to #title-phase `src`ing `logo_versuskidspresent.98x68.svg`.
	» Positioned in the top-left corner, and upsized a bit.
	• Added CSS & skrollr animation to have it fade in just as the #title-phase covers the screen.
• Added a `title_phase_open_before` Skrollr constant that works like `sky_phase_open_before`.
• Minor: Renamed `logo_versuskidspresents.98x68.svg` to `logo_versuskidspresent.98x68.svg`, since the latter is what the text in the graphic says.

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6826,6 +6826,27 @@ body {
   position: relative;
   overflow: hidden;
 }
+#title-phase > .overlay#versuskidspresent,
+#title-phase > .overlay #versuskidspresent {
+  top: 10px;
+  left: 10px;
+  -skrollr-animation-name: versuskidspresent-op;
+}
+#title-phase > .overlay#versuskidspresent,
+#title-phase > .overlay #versuskidspresent,
+#title-phase > .overlay#versuskidspresent img,
+#title-phase > .overlay #versuskidspresent img {
+  width: 147px;
+  height: auto;
+}
+@-skrollr-keyframes versuskidspresent-op {
+  _title_phase_open_before {
+    opacity[linear]: 0.0;
+  }
+  _title_phase_open {
+    opacity[linear]: 1.0;
+  }
+}
 .starfield.image,
 .starfield .image,
 #starfield1.image,
