Made lakestrip-pos animation more subtle
• Was still too springy; made `lakestrip-pos` animation more subtle:
	◦ Now uses `outQuad` easing instead of `outExpo`.
	◦ Now animates from 50%-down to 15%-down instead of 100%-15%.

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -7012,10 +7012,10 @@ body {
 }
 @-skrollr-keyframes lakestrip-pos {
   _title_phase_appear {
-    background-position[outExpo]: 0 100%;
+    background-position[outQuad]: 0 50%;
   }
   _title_phase_close {
-    background-position[outExpo]: 0 15%;
+    background-position[outQuad]: 0 15%;
   }
 }
 #sparkles.image,
