Added #purplestars-border at top of #title-phase
• Added a `#purplestars-border.back.image` to #title-phase's back-fill.
• Added `#purplestars-border` CSS to size it to 1/3 it's natural size, make the height !important (there's probably a better way to do this), and position above the top edge by half its height.

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6979,6 +6979,14 @@ body {
 #starfield4 .image {
   background-image: url('../graphics/starfield4.s700.png');
 }
+#purplestars-border.image,
+#purplestars-border .image {
+  background-image: url('../graphics/border_purplestars.2000x418.svg');
+  background-repeat: repeat-x;
+  background-size: 666px 139.194px;
+  height: 139.194px !important;
+  top: -69.597px;
+}
 #lakestrip.image,
 #lakestrip .image {
   background-repeat: no-repeat;
