Tweaked title phase layout
• Lacquer `title-logo` moved up by 5%.
• Lacquer `title-logo` moved to the right by 10%.
	» to avoid overlapping with the “Versus Kids present” logo
• “Leave your mark…” in `title-closing` moved up by 12%.
• `stargazer` graphic moved up by 10%.
• `stargazer` graphic shifted to the left just a smidge (from a negative `margin-left` of 30% its width to 40% its width).

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -7065,7 +7065,8 @@ body {
   position: absolute;
 }
 #title-logo {
-  top: 10%;
+  top: 5%;
+  left: 10%;
   width: 726px;
   height: 381.6px;
 }
@@ -7082,8 +7083,8 @@ body {
   top: 48.11320755%;
 }
 #title-closing {
-  top: 72%;
-  bottom: 0%;
+  top: 60%;
+  bottom: 10%;
 }
 #title-closing > .inner .statement {
   text-align: center;
@@ -7094,7 +7095,7 @@ body {
   width: 220px;
   height: auto;
   left: 50%;
-  margin-left: -66px;
+  margin-left: -88px;
   bottom: -10px;
 }
 #title-bottom {
