--- a/less/main.less
+++ b/less/main.less
@@ -465,7 +465,8 @@ html, body {
 #title-logo {
 	&:extend(.title-piece all);
 	
-	top: 10%;
+	top: 5%;
+	left: 10%;
 	
 	@logoBaseWidth: 605px;
 	@logoBaseHeight: 318px;
@@ -494,7 +495,7 @@ html, body {
 #title-closing {
 	&:extend(.title-piece all);
 	
-	top: 72%; bottom: 0%;
+	top: 60%; bottom: 10%;
 	
 	> .inner {
 		.statement {
@@ -506,7 +507,7 @@ html, body {
 			height: auto;
 			
 			left: 50%;
-			margin-left: (-@stargazerWidth * 0.3);
+			margin-left: (-@stargazerWidth * 0.4);
 			
 			bottom: -10px;
 		}
