Gave everything a bit more vertical breathing room
Gave everything a bit more vertical breathing room, for better view of the stars and to give it a more relaxed, less hurried feel.  On most screens, you shouldn’t see the next text chunk until the one current one is nearly off the top edge of the screen.

• Drop the vertical height of the 1st “there you are.” section from `vh-100` to `vh-75`, so it’s closer to the top of the page (the text inside is vertically centered).
• Sized-up the next two from `vh-75` to `vh-125` and `vh-100` to maintain similar gaps between them.
• Sized up the next 3 (the “my X/Y/Z” ones) from `vh-50` to `vh-100`.
• `title-phase` up-sized from `vh-100` to `vh-125` to avoid seeing the starry sky and the lake at the same time, and to push the “coming soon” and other stuff down to be more footer-ish.
• Added a handful of new `vh-…` presets to `main.less`: `vh-125`, `vh-175`, and `vh-250`.

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6445,13 +6445,25 @@ body {
 .screen-height-rel.vh-100 {
   height: 100vh;
 }
+.screen-height-rel .vh-125,
+.screen-height-rel.vh-125 {
+  height: 125vh;
+}
 .screen-height-rel .vh-150,
 .screen-height-rel.vh-150 {
   height: 150vh;
 }
+.screen-height-rel .vh-175,
+.screen-height-rel.vh-175 {
+  height: 175vh;
+}
 .screen-height-rel .vh-200,
 .screen-height-rel.vh-200 {
   height: 200vh;
+}
+.screen-height-rel .vh-250,
+.screen-height-rel.vh-250 {
+  height: 250vh;
 }
 .screen-height-rel .vh-300,
 .screen-height-rel.vh-300 {
@@ -6473,13 +6485,25 @@ body {
 .base-height-rel.vh-100 {
   height: 1000px;
 }
+.base-height-rel .vh-125,
+.base-height-rel.vh-125 {
+  height: 1250px;
+}
 .base-height-rel .vh-150,
 .base-height-rel.vh-150 {
   height: 1500px;
 }
+.base-height-rel .vh-100,
+.base-height-rel.vh-175 {
+  height: 1750px;
+}
 .base-height-rel .vh-200,
 .base-height-rel.vh-200 {
   height: 2000px;
+}
+.base-height-rel .vh-250,
+.base-height-rel.vh-250 {
+  height: 2500px;
 }
 .base-height-rel .vh-300,
 .base-height-rel.vh-300 {
@@ -6501,13 +6525,25 @@ body {
 .line-height-rel.vh-100 {
   height: 850px;
 }
+.line-height-rel .vh-125,
+.line-height-rel.vh-125 {
+  height: 1062.5px;
+}
 .line-height-rel .vh-150,
 .line-height-rel.vh-150 {
   height: 1275px;
 }
+.line-height-rel .vh-175,
+.line-height-rel.vh-175 {
+  height: 1487.5px;
+}
 .line-height-rel .vh-200,
 .line-height-rel.vh-200 {
   height: 1700px;
+}
+.line-height-rel .vh-250,
+.line-height-rel.vh-250 {
+  height: 2125px;
 }
 .line-height-rel .vh-300,
 .line-height-rel.vh-300 {
