--- a/less/main.less
+++ b/less/main.less
@@ -105,8 +105,11 @@ html, body {
 	& .vh-50, &.vh-50 { .vh(); height: 50vh; }
 	& .vh-75, &.vh-75 { .vh(); height: 75vh; }
 	& .vh-100, &.vh-100 { .vh(); height: 100vh; }
+	& .vh-125, &.vh-125 { .vh(); height: 125vh; }
 	& .vh-150, &.vh-150 { .vh(); height: 150vh; }
+	& .vh-175, &.vh-175 { .vh(); height: 175vh; }
 	& .vh-200, &.vh-200 { .vh(); height: 200vh; }
+	& .vh-250, &.vh-250 { .vh(); height: 250vh; }
 	& .vh-300, &.vh-300 { .vh(); height: 300vh; }
 	& .vh-400, &.vh-400 { .vh(); height: 400vh; }
 }
@@ -118,8 +121,11 @@ html, body {
 	& .vh-50, &.vh-50 { .vh(); height: (50 * @base-height-rel-height-base); }
 	& .vh-75, &.vh-75 { .vh(); height: (75 * @base-height-rel-height-base); }
 	& .vh-100, &.vh-100 { .vh(); height: (100 * @base-height-rel-height-base); }
+	& .vh-125, &.vh-125 { .vh(); height: (125 * @base-height-rel-height-base); }
 	& .vh-150, &.vh-150 { .vh(); height: (150 * @base-height-rel-height-base); }
+	& .vh-100, &.vh-175 { .vh(); height: (175 * @base-height-rel-height-base); }
 	& .vh-200, &.vh-200 { .vh(); height: (200 * @base-height-rel-height-base); }
+	& .vh-250, &.vh-250 { .vh(); height: (250 * @base-height-rel-height-base); }
 	& .vh-300, &.vh-300 { .vh(); height: (300 * @base-height-rel-height-base); }
 	& .vh-400, &.vh-400 { .vh(); height: (400 * @base-height-rel-height-base); }
 }
@@ -130,8 +136,11 @@ html, body {
 	& .vh-50, &.vh-50 { .vh(); height: (50 * @line-height-rel-height-base); }
 	& .vh-75, &.vh-75 { .vh(); height: (75 * @line-height-rel-height-base); }
 	& .vh-100, &.vh-100 { .vh(); height: (100 * @line-height-rel-height-base); }
+	& .vh-125, &.vh-125 { .vh(); height: (125 * @line-height-rel-height-base); }
 	& .vh-150, &.vh-150 { .vh(); height: (150 * @line-height-rel-height-base); }
+	& .vh-175, &.vh-175 { .vh(); height: (175 * @line-height-rel-height-base); }
 	& .vh-200, &.vh-200 { .vh(); height: (200 * @line-height-rel-height-base); }
+	& .vh-250, &.vh-250 { .vh(); height: (250 * @line-height-rel-height-base); }
 	& .vh-300, &.vh-300 { .vh(); height: (300 * @line-height-rel-height-base); }
 	& .vh-400, &.vh-400 { .vh(); height: (400 * @line-height-rel-height-base); }
 }
