--- a/css/styles.css
+++ b/css/styles.css
@@ -6445,13 +6445,25 @@ body {
 .screen-height-rel.vh-100 {
   height: 100vh;
 }
+.screen-height-rel .vh-125,
+.screen-height-rel.vh-125 {
+  height: 125vh;
+}
 .screen-height-rel .vh-150,
 .screen-height-rel.vh-150 {
   height: 150vh;
 }
+.screen-height-rel .vh-175,
+.screen-height-rel.vh-175 {
+  height: 175vh;
+}
 .screen-height-rel .vh-200,
 .screen-height-rel.vh-200 {
   height: 200vh;
+}
+.screen-height-rel .vh-250,
+.screen-height-rel.vh-250 {
+  height: 250vh;
 }
 .screen-height-rel .vh-300,
 .screen-height-rel.vh-300 {
@@ -6473,13 +6485,25 @@ body {
 .base-height-rel.vh-100 {
   height: 1000px;
 }
+.base-height-rel .vh-125,
+.base-height-rel.vh-125 {
+  height: 1250px;
+}
 .base-height-rel .vh-150,
 .base-height-rel.vh-150 {
   height: 1500px;
 }
+.base-height-rel .vh-100,
+.base-height-rel.vh-175 {
+  height: 1750px;
+}
 .base-height-rel .vh-200,
 .base-height-rel.vh-200 {
   height: 2000px;
+}
+.base-height-rel .vh-250,
+.base-height-rel.vh-250 {
+  height: 2500px;
 }
 .base-height-rel .vh-300,
 .base-height-rel.vh-300 {
@@ -6501,13 +6525,25 @@ body {
 .line-height-rel.vh-100 {
   height: 850px;
 }
+.line-height-rel .vh-125,
+.line-height-rel.vh-125 {
+  height: 1062.5px;
+}
 .line-height-rel .vh-150,
 .line-height-rel.vh-150 {
   height: 1275px;
 }
+.line-height-rel .vh-175,
+.line-height-rel.vh-175 {
+  height: 1487.5px;
+}
 .line-height-rel .vh-200,
 .line-height-rel.vh-200 {
   height: 1700px;
+}
+.line-height-rel .vh-250,
+.line-height-rel.vh-250 {
+  height: 2125px;
 }
 .line-height-rel .vh-300,
 .line-height-rel.vh-300 {
