Footer social media icons (Twitter, FB, IG, Tumblr)
• Changed the `#comingsoon` to be pinned to the bottom-right instead of the bottom-left.
• Created `icon_….bordered.s63.svg` variants of the existing `icon_….s20.svg` icons modified to have black graphics with a white outline, to match the style of the “Coming soon” graphic.
	» Skipped `icon_youtube.s20.svg` because it Illustrator reports an “unknown error [PGFp]” when trying to open it.  Weird.
• Created a new bottom-left-pinned `#badges` <div> in the HTML just before the `#comingsoon`, added <a>-wrapped <img>s to it, and styled them to be the same height as the `#comingsoon`.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7035,11 +7035,33 @@ body {
 #title-bottom {
   bottom: 0%;
 }
-#title-bottom > .inner #comingsoon {
-  width: 210px;
-  height: auto;
+#title-bottom > .inner #badges {
+  width: 50%;
+  height: 75px;
   bottom: 10px;
   left: 10px;
+}
+#title-bottom > .inner #badges #badge-twitter {
+  height: 75px;
+  width: auto;
+}
+#title-bottom > .inner #badges #badge-facebook {
+  height: 75px;
+  width: auto;
+}
+#title-bottom > .inner #badges #badge-instagram {
+  height: 75px;
+  width: auto;
+}
+#title-bottom > .inner #badges #badge-tumblr {
+  height: 75px;
+  width: auto;
+}
+#title-bottom > .inner #comingsoon {
+  height: 75px;
+  width: auto;
+  bottom: 10px;
+  right: 10px;
 }
 
 /*# sourceMappingURL=styles.css.map */
