Minor: Moved badge `id`s from <img> to <a>
• Moved the 4 badge’s `id="…"` attributes from their <img>s to their containing <a> tags, for consistency and better CSS-ability.
	• Modified `.badge()` CSS to size the `img`s properly.

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -7041,19 +7041,23 @@ body {
   bottom: 10px;
   left: 10px;
 }
-#title-bottom > .inner #badges #badge-twitter {
+#title-bottom > .inner #badges #badge-twitter,
+#title-bottom > .inner #badges #badge-twitter img {
   height: 75px;
   width: auto;
 }
-#title-bottom > .inner #badges #badge-facebook {
+#title-bottom > .inner #badges #badge-facebook,
+#title-bottom > .inner #badges #badge-facebook img {
   height: 75px;
   width: auto;
 }
-#title-bottom > .inner #badges #badge-instagram {
+#title-bottom > .inner #badges #badge-instagram,
+#title-bottom > .inner #badges #badge-instagram img {
   height: 75px;
   width: auto;
 }
-#title-bottom > .inner #badges #badge-tumblr {
+#title-bottom > .inner #badges #badge-tumblr,
+#title-bottom > .inner #badges #badge-tumblr img {
   height: 75px;
   width: auto;
 }
